<resources>
    <string name="app_name">KEYPRTest</string>

    <!-- Main Activity -->
    <string name="wifi_name">Wi-Fi network name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="radius">Radius in meters</string>
    <string name="start_watching">Start Watching</string>
    <string name="stop_watching">Stop Watching</string>
    <string name="you_are_inside_zone">You are inside the Geofence zone</string>
    <string name="you_are_outside_zone">You are outside the Geofence zone</string>

    <!-- Alerts -->
    <string name="alert">Alert</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Error -->
    <string name="latitude_error">Latitude should be between -90 and 90</string>
    <string name="longitude_error">Longitude should be between -180 and 180</string>
    <string name="wifi_name_error">Wifi Name cannot be empty</string>
    <string name="radius_error">Radius cannot be not possitive</string>

</resources>
